tests/macros/confirm/validate_async.stderr
error: option `validate_async` does not exist for kind `confirm`
 --> $DIR/validate_async.rs:2:53
  |
2 |     let q = inquisition::questions![Confirm { async validate: todo!() }];
  |                                                     ^^^^^^^^
