tests/macros/confirm/validate_async.rs
fn main() {
    let q = inquisition::questions![Confirm { async validate: todo!() }];
}
